# EnterpriseClaw

./: .dockerignore  .env.example  .example.mcp_config.json  .gitignore  Dockerfile  Makefile  app.py  backup.md  docker-compose.yml  implementation_plan.md.resolved  memory.py  pyproject.toml  readme.md  test_tcm.py
config/: settings.py
core/: browser_session.py  channel_manager.py  constants.py  errors.py  exec_sandbox.py  hitl.py  llm.py  observers.py  scheduler.py  text_utils.py  tool_manifest.py  worker.py
core/execution/: __init__.py  job_runner.py
core/graphs/: __init__.py  states.py  supervisor.py  worker.py
core/models/: __init__.py  scheduler_types.py
core/nodes/: supervisor_nodes.py  tool_error.py  worker_nodes.py
interfaces/: cli.py  telegram.py  web_chat.py  whatsapp.py
mcp_servers/: __init__.py  background_tools.py  browser_tools.py  core_tools.py  exec_tools.py  external_mcp.py  google_workspace.py  web_tools.py
memory/: __init__.py  db.py  retrieval.py  vectorstore.py  vectorstore.py.backup_20260320
nodes/: agent.py  approval.py  graph.py  subagents.py  tools.py
scripts/: onboard.py  onboarding.py
skills/browser_use/: skill.md
skills/cron/: skill.md
skills/exec_tools/: SKILL.md
skills/identity/: skill.md
skills/web_tools/: skill.md
static/css/: chat.css  onboarding.css
static/js/: chat.js  onboarding.js  settings.js
templates/: chat.html  onboarding.html
