[project]
name = "personal-assistant"
version = "0.1.0"
description = "Production-grade agentic personal assistant via Telegram"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    # Agentic orchestration
    "langgraph>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Google APIs (for workspace MCP server)
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    # Environment
    "python-dotenv>=1.0.0",
    # Observability
    "zvec>=0.2.0",
    "fastembed>=0.7.4",
    "langchain-text-splitters>=1.1.1",
    "beautifulsoup4>=4.12.0",
    "ddgs>=9.10.0",
    "trafilatura>=1.12.0",
    "markdownify>=0.13.0",
    "croniter>=6.0.0",
    "typeguard>=4.5.1",
    "langchain>=0.3.0",
    "langchain-google-genai>=4.2.1",
    "langchain-core>=1.2.14",
    "playwright>=1.50.0",
    "jinja2>=3.1.6",
    "langchain-openai>=1.1.10",
    "langchain-community>=0.4.1",
    "langchain-anthropic>=1.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
